# Neural-Topic-Modeling-vmf

./: Config  DEVELOPMENT.md  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
doc/: index.rst
examples/: main.py  vONT_example.ipynb
src/topicmodeling/: model.py
test/: README.md  test_vontss.py
